// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a table with selectable rows 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -89,11 +89,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 0 Not Selected
+             Row 0 Selected
            </div>
          </td>
          <td>
            tanner
          </td>
@@ -126,11 +126,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 1 Not Selected
+             Row 1 Selected
            </div>
          </td>
          <td>
            derek
          </td>
@@ -163,11 +163,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2 Not Selected
+             Row 2 Selected
            </div>
          </td>
          <td>
            joe
          </td>
@@ -200,11 +200,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2.0 Not Selected
+             Row 2.0 Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -237,11 +237,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2.1 Not Selected
+             Row 2.1 Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -274,11 +274,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 3 Not Selected
+             Row 3 Selected
            </div>
          </td>
          <td>
            jaylen
          </td>
@@ -311,11 +311,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 4 Not Selected
+             Row 4 Selected
            </div>
          </td>
          <td>
            tanner
          </td>
@@ -348,11 +348,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 5 Not Selected
+             Row 5 Selected
            </div>
          </td>
          <td>
            derek
          </td>
@@ -385,11 +385,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 6 Not Selected
+             Row 6 Selected
            </div>
          </td>
          <td>
            joe
          </td>
@@ -422,11 +422,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 6.0 Not Selected
+             Row 6.0 Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -459,11 +459,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 6.1 Not Selected
+             Row 6.1 Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -496,11 +496,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 7 Not Selected
+             Row 7 Selected
            </div>
          </td>
          <td>
            jaylen
          </td>
@@ -533,11 +533,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 8 Not Selected
+             Row 8 Selected
            </div>
          </td>
          <td>
            tanner
          </td>
@@ -570,11 +570,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 9 Not Selected
+             Row 9 Selected
            </div>
          </td>
          <td>
            derek
          </td>
@@ -607,11 +607,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 10 Not Selected
+             Row 10 Selected
            </div>
          </td>
          <td>
            joe
          </td>
@@ -644,11 +644,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 10.0 Not Selected
+             Row 10.0 Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -681,11 +681,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 10.1 Not Selected
+             Row 10.1 Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -718,11 +718,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 11 Not Selected
+             Row 11 Selected
            </div>
          </td>
          <td>
            jaylen
          </td>
@@ -755,11 +755,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 12 Not Selected
+             Row 12 Selected
            </div>
          </td>
          <td>
            tanner
          </td>
@@ -792,11 +792,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 13 Not Selected
+             Row 13 Selected
            </div>
          </td>
          <td>
            derek
          </td>
@@ -829,11 +829,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 14 Not Selected
+             Row 14 Selected
            </div>
          </td>
          <td>
            joe
          </td>
@@ -866,11 +866,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 14.0 Not Selected
+             Row 14.0 Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -903,11 +903,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 14.1 Not Selected
+             Row 14.1 Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -940,11 +940,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 15 Not Selected
+             Row 15 Selected
            </div>
          </td>
          <td>
            jaylen
          </td>
@@ -977,11 +977,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 16 Not Selected
+             Row 16 Selected
            </div>
          </td>
          <td>
            tanner
          </td>
@@ -1014,11 +1014,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 17 Not Selected
+             Row 17 Selected
            </div>
          </td>
          <td>
            derek
          </td>
@@ -1051,11 +1051,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 18 Not Selected
+             Row 18 Selected
            </div>
          </td>
          <td>
            joe
          </td>
@@ -1088,11 +1088,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 18.0 Not Selected
+             Row 18.0 Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -1125,11 +1125,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 18.1 Not Selected
+             Row 18.1 Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -1162,11 +1162,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 19 Not Selected
+             Row 19 Selected
            </div>
          </td>
          <td>
            jaylen
          </td>
@@ -1199,11 +1199,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 20 Not Selected
+             Row 20 Selected
            </div>
          </td>
          <td>
            tanner
          </td>
@@ -1236,11 +1236,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 21 Not Selected
+             Row 21 Selected
            </div>
          </td>
          <td>
            derek
          </td>
@@ -1273,11 +1273,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 22 Not Selected
+             Row 22 Selected
            </div>
          </td>
          <td>
            joe
          </td>
@@ -1310,11 +1310,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 22.0 Not Selected
+             Row 22.0 Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -1347,11 +1347,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 22.1 Not Selected
+             Row 22.1 Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -1384,11 +1384,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 23 Not Selected
+             Row 23 Selected
            </div>
          </td>
          <td>
            jaylen
          </td>
@@ -1409,15 +1409,52 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 0
+     Selected Rows: 36
    </p>
    <pre>
      <code>
        {
-   "selectedRowPaths": []
+   "selectedRowPaths": [
+     "0",
+     "1",
+     "2",
+     "2.0",
+     "2.1",
+     "3",
+     "4",
+     "5",
+     "6",
+     "6.0",
+     "6.1",
+     "7",
+     "8",
+     "9",
+     "10",
+     "10.0",
+     "10.1",
+     "11",
+     "12",
+     "13",
+     "14",
+     "14.0",
+     "14.1",
+     "15",
+     "16",
+     "17",
+     "18",
+     "18.0",
+     "18.1",
+     "19",
+     "20",
+     "21",
+     "22",
+     "22.0",
+     "22.1",
+     "23"
+   ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 2`] = `
Snapshot Diff:
- First value
+ Second value

@@ -89,11 +89,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 0 Selected
+             Row 0 Not Selected
            </div>
          </td>
          <td>
            tanner
          </td>
@@ -126,11 +126,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 1 Selected
+             Row 1 Not Selected
            </div>
          </td>
          <td>
            derek
          </td>
@@ -163,11 +163,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2 Selected
+             Row 2 Not Selected
            </div>
          </td>
          <td>
            joe
          </td>
@@ -200,11 +200,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2.0 Selected
+             Row 2.0 Not Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -237,11 +237,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2.1 Selected
+             Row 2.1 Not Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -274,11 +274,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 3 Selected
+             Row 3 Not Selected
            </div>
          </td>
          <td>
            jaylen
          </td>
@@ -311,11 +311,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 4 Selected
+             Row 4 Not Selected
            </div>
          </td>
          <td>
            tanner
          </td>
@@ -348,11 +348,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 5 Selected
+             Row 5 Not Selected
            </div>
          </td>
          <td>
            derek
          </td>
@@ -385,11 +385,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 6 Selected
+             Row 6 Not Selected
            </div>
          </td>
          <td>
            joe
          </td>
@@ -422,11 +422,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 6.0 Selected
+             Row 6.0 Not Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -459,11 +459,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 6.1 Selected
+             Row 6.1 Not Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -496,11 +496,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 7 Selected
+             Row 7 Not Selected
            </div>
          </td>
          <td>
            jaylen
          </td>
@@ -533,11 +533,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 8 Selected
+             Row 8 Not Selected
            </div>
          </td>
          <td>
            tanner
          </td>
@@ -570,11 +570,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 9 Selected
+             Row 9 Not Selected
            </div>
          </td>
          <td>
            derek
          </td>
@@ -607,11 +607,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 10 Selected
+             Row 10 Not Selected
            </div>
          </td>
          <td>
            joe
          </td>
@@ -644,11 +644,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 10.0 Selected
+             Row 10.0 Not Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -681,11 +681,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 10.1 Selected
+             Row 10.1 Not Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -718,11 +718,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 11 Selected
+             Row 11 Not Selected
            </div>
          </td>
          <td>
            jaylen
          </td>
@@ -755,11 +755,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 12 Selected
+             Row 12 Not Selected
            </div>
          </td>
          <td>
            tanner
          </td>
@@ -792,11 +792,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 13 Selected
+             Row 13 Not Selected
            </div>
          </td>
          <td>
            derek
          </td>
@@ -829,11 +829,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 14 Selected
+             Row 14 Not Selected
            </div>
          </td>
          <td>
            joe
          </td>
@@ -866,11 +866,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 14.0 Selected
+             Row 14.0 Not Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -903,11 +903,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 14.1 Selected
+             Row 14.1 Not Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -940,11 +940,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 15 Selected
+             Row 15 Not Selected
            </div>
          </td>
          <td>
            jaylen
          </td>
@@ -977,11 +977,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 16 Selected
+             Row 16 Not Selected
            </div>
          </td>
          <td>
            tanner
          </td>
@@ -1014,11 +1014,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 17 Selected
+             Row 17 Not Selected
            </div>
          </td>
          <td>
            derek
          </td>
@@ -1051,11 +1051,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 18 Selected
+             Row 18 Not Selected
            </div>
          </td>
          <td>
            joe
          </td>
@@ -1088,11 +1088,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 18.0 Selected
+             Row 18.0 Not Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -1125,11 +1125,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 18.1 Selected
+             Row 18.1 Not Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -1162,11 +1162,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 19 Selected
+             Row 19 Not Selected
            </div>
          </td>
          <td>
            jaylen
          </td>
@@ -1199,11 +1199,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 20 Selected
+             Row 20 Not Selected
            </div>
          </td>
          <td>
            tanner
          </td>
@@ -1236,11 +1236,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 21 Selected
+             Row 21 Not Selected
            </div>
          </td>
          <td>
            derek
          </td>
@@ -1273,11 +1273,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 22 Selected
+             Row 22 Not Selected
            </div>
          </td>
          <td>
            joe
          </td>
@@ -1310,11 +1310,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 22.0 Selected
+             Row 22.0 Not Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -1347,11 +1347,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 22.1 Selected
+             Row 22.1 Not Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -1384,11 +1384,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 23 Selected
+             Row 23 Not Selected
            </div>
          </td>
          <td>
            jaylen
          </td>
@@ -1409,52 +1409,15 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 36
+     Selected Rows: 0
    </p>
    <pre>
      <code>
        {
-   "selectedRowPaths": [
-     "0",
-     "1",
-     "2",
-     "2.0",
-     "2.1",
-     "3",
-     "4",
-     "5",
-     "6",
-     "6.0",
-     "6.1",
-     "7",
-     "8",
-     "9",
-     "10",
-     "10.0",
-     "10.1",
-     "11",
-     "12",
-     "13",
-     "14",
-     "14.0",
-     "14.1",
-     "15",
-     "16",
-     "17",
-     "18",
-     "18.0",
-     "18.1",
-     "19",
-     "20",
-     "21",
-     "22",
-     "22.0",
-     "22.1",
-     "23"
-   ]
+   "selectedRowPaths": []
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 3`] = `
Snapshot Diff:
- First value
+ Second value

@@ -89,11 +89,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 0 Not Selected
+             Row 0 Selected
            </div>
          </td>
          <td>
            tanner
          </td>
@@ -163,11 +163,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2 Not Selected
+             Row 2 Selected
            </div>
          </td>
          <td>
            joe
          </td>
@@ -200,11 +200,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2.0 Not Selected
+             Row 2.0 Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -237,11 +237,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2.1 Not Selected
+             Row 2.1 Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -1409,15 +1409,20 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 0
+     Selected Rows: 4
    </p>
    <pre>
      <code>
        {
-   "selectedRowPaths": []
+   "selectedRowPaths": [
+     "0",
+     "2",
+     "2.0",
+     "2.1"
+   ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 4`] = `
Snapshot Diff:
- First value
+ Second value

@@ -163,11 +163,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2 Selected
+             Row 2 Not Selected
            </div>
          </td>
          <td>
            joe
          </td>
@@ -200,11 +200,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2.0 Selected
+             Row 2.0 Not Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -237,11 +237,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2.1 Selected
+             Row 2.1 Not Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -1409,20 +1409,17 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 4
+     Selected Rows: 1
    </p>
    <pre>
      <code>
        {
    "selectedRowPaths": [
-     "0",
-     "2",
-     "2.0",
-     "2.1"
+     "0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 5`] = `
Snapshot Diff:
- First value
+ Second value

@@ -200,11 +200,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2.0 Not Selected
+             Row 2.0 Selected
            </div>
          </td>
          <td>
            bob
          </td>
@@ -1409,17 +1409,18 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 1
+     Selected Rows: 2
    </p>
    <pre>
      <code>
        {
    "selectedRowPaths": [
-     "0"
+     "0",
+     "2.0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 6`] = `
Snapshot Diff:
- First value
+ Second value

@@ -237,11 +237,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2.1 Not Selected
+             Row 2.1 Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -1409,18 +1409,19 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 2
+     Selected Rows: 3
    </p>
    <pre>
      <code>
        {
    "selectedRowPaths": [
      "0",
-     "2.0"
+     "2.0",
+     "2.1"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 7`] = `
Snapshot Diff:
- First value
+ Second value

@@ -237,11 +237,11 @@
              </label>
            </div>
          </td>
          <td>
            <div>
-             Row 2.1 Selected
+             Row 2.1 Not Selected
            </div>
          </td>
          <td>
            john
          </td>
@@ -1409,19 +1409,18 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 3
+     Selected Rows: 2
    </p>
    <pre>
      <code>
        {
    "selectedRowPaths": [
      "0",
-     "2.0",
-     "2.1"
+     "2.0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;
